2007-04-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/ds400rom.h,
	* device/lib/ds390/lcd390.c,
	* device/lib/ds390/memcpyx.c,
	* device/lib/ds390/rtc390.c,
	* device/lib/ds400/ds400rom.c,
	* device/lib/ds400/memcpyx.c,
	* device/lib/hc08/_ret.c: more replacements of keywords with their
	  double underscore equivalents
	* device/lib/ds390/Makefile.in,
	* device/lib/ds400/Makefile.in,
	* device/lib/gbz80/Makefile.in,
	* device/lib/hc08/Makefile.in,
	* device/lib/mcs51/Makefile.in,
	* device/lib/z80/Makefile.in: added --std-c89 to CFLAGS

2007-04-17 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx, src/SDCCmain.c, src/SDCCglobal.h, src/ds390/gen.c,
	  src/hc08/gen.c, src/mcs51/gen.c, src/mcs51/rtrack.c:
	  fixed #1493816: option --no-gen-comments: --no-gen-comments renamed
	  to --fverbose-asm, to be gcc'ish

2007-04-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (aopOp): set size to 1 for ruonly, fixes bug 1699455

2007-04-17 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: fixed #1701874: Mac OSX references in SDCC manual
	* device/lib/ds400/tinibios.c, device/lib/hc08/_divuint.c,
	  device/lib/hc08/_divulong.c: replaced _asm and _endasm keywords
	  with their double underscore equivalent

2007-04-14 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: some additional "freeware" replaced with "free open
	  source"

2007-04-13 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: -pedantic-parse-number is not in conformance with
	  C99 standard
	* device/examples/serialcomm/windows/serial.[ch],
	  device/examples/serialcomm/windows/test_serialcomm.cpp:
	  updated by Bela Torok
	* device/examples/serialcomm/windows/serialcomm.dsw,
	  device/examples/serialcomm/windows/serialcomm.dsp: added

2007-04-13 Jan Waclawek <wek AT efton.sk>

	* doc/sdccman.lyx: additions and changes at various places
	  (submitted as #1697136).
	  (svn commit by Frieder Ferlemann <Frieder.Ferlemann AT web.de>)
