@@ -49,4 +49,7 @@ typedef struct {
     const char *help;
 } OPTION;
 
+char *getStringArg(const char *szStart, char **argv, int *pi, int argc);
+int getIntArg(const char *szStart, char **argv, int *pi, int argc);
+
 #endif
