@@ -1,3 +1,15 @@
+2007-04-19 Borut Razem <borut.razem AT siol.net>
+
+	* src/port.h: use const poiters to strings
+	* src/SDCCargs.h: declared getStringArg() and getIntArg()
+	* src/pic16/main.c: include SDCCargs.h
+	* src/SDCCglobl.h: code_seg and const_seg are not pointers to
+	  const char, since the strings are dynamically allocated
+	* src/SDCCmain.c: options.code_seg and options.const_seg are
+	  dynamically allocated; check port specific command line options
+	  before the general ones
+	* src/z80/main.c: fixed bug #1631895: codeseg/constseg #pragma fail
+
 2007-04-18 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/include/ds400rom.h,
